--- a/assets/page2style.css
+++ b/assets/page2style.css
@@ -4,11 +4,11 @@ body {
     font-family: 'Raleway', sans-serif;
     padding: 0;
     margin: 0 auto;
-    background-image: linear-gradient(to right, #E95579, #726FEE);
+    background-image: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
 }
 
 .titre {
-    color: white;
+    color:black;
     font-size: 40px;
     margin: 2px;
     padding: 2px;
@@ -22,11 +22,12 @@ nav {
     height: 12vh;
     width: 100%;
     margin: auto;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    border-bottom: 1px solid black;
 }
 
 .nav-links {
@@ -42,53 +43,50 @@ li {
     margin: 20px;
     letter-spacing: 3px;
     text-align: center;
+    font-weight: bold;
 }
 
 li:hover {
-    border-bottom: 1 px solid white;
+    border-bottom: 1 px solid black;
 }
 
-a {
+nav a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
+
+a:hover {
+    color:grey;
+  }
 
 /*-----------MES ARTISTES------------*/
 
-.titreclips, .titremesartistes {
-    opacity: 0;
-}
-
 img {
-    margin: 13px;
-    width: 175px;
-    height: 153px;
+    width: 160px;
+    height: 150px;
     border: 1px solid black;
-    margin-top: 40px;
 }
 
-.descriptionartistes {
+.descriptionpnl, .descriptionhatik, .descriptionhalsey, .descriptionninho, .lestitres{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: stretch;
-}
-
-.mesartistes {
-    width: 60px;
+    justify-content: space-evenly;
     margin: 2px;
-    margin-left: 90px;
+    padding:10px; 
+    animation: fadein 2s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari et Chrome */
+    -o-animation: fadein 2s; /* Opera */
+}  
+
+.titres p {
+    letter-spacing: 3px;
+    font-size: 19px;
+    text-align: center;
+    font-weight: bold;
 }
 
 .photosclips {
-    margin-left: 90px;
-    margin: 90px;
-    width: 450px;
-}
-
-.photosclips img {
     width: 320px;
     height: 120px;
     border: 1px solid black;
@@ -98,51 +96,53 @@ img {
     font-size: 15px;
     font-weight: bold;
     color: black;
-    margin: 0px;
-    padding: 0px;
     text-align: center;
+    margin:0px;
+    padding:1px;
+    letter-spacing: 1px;
 }
 
-.biographiedumoment {
-    margin: 60px;
-    width: 530px;
-    height: 800px;
-    background-color: black;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-    padding: 30px;
-    color: white;
-    border: 1px solid white;
+.titrechanson a {
+    color:black;
+    text-decoration: none;
 }
 
-.biographiedumoment img {
-    margin: 0px;
-    width: 500px;
-    height: 283px;
-}
+.titrechanson a:hover {
+    color:grey;
+  }
 
-.titrebiographie {
-    font-size: 18px;
-    letter-spacing: 5px;
-    font-weight: bold;
-    text-align: center;
-}
 
-.biographie {
-    text-align: justify;
-    font-size: 16px;
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
-
-.titreconcerts {
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 15px;
+@-moz-keyframes fadein { /* sur Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
-
-.concerts {
-    padding: 30px;
-    text-align: center;
-    line-height: 5px;
+@-webkit-keyframes fadein { /* sur Safari et Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* sur Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 /*----------------LE FOOTER--------------*/
@@ -152,11 +152,10 @@ img {
     flex-direction: row;
     justify-content: space-around;
     background-color: black;
-    color: grey;
+    color: white;
     text-align: center;
     font-size: 14px;
     margin: 0px;
-    ;
     letter-spacing: 2px;
 }
 
@@ -169,55 +168,58 @@ img {
 
 @media screen and (max-width:768px) {
 
-    body {
-        margin: 0 auto;
-        padding: 0px;
-    }
+body {
+    margin:0 auto;
+    padding:0px;
+}
 
-    .titre {
-        font-size: 25px;
-    }
+.titre {
+    font-size:17px;
+    text-align: center;
+}
 
-  .nav-links {
-        font-size: 18px;
-    }
+.nav-links {
+    font-size: 14px;
+}
 
-    .photosclips {
-        width: 200px;
-        height: 100px;
-        margin-left: 0px;
-    }
+nav {
+    background: none;
+    border:none;
+    border-bottom: 1px solid black;
+    margin:auto;
+    width:350px;
+}
 
-    .mesartistes {
-        margin-left:0px;
-        margin:25px;
-    }
+.titres p {
+    font-size: 12px;
+}
 
-    .photosclips img {
-        width: 200px;
-        height: 100px;
-        border: 1px solid black;
-    }
-    .titrechanson {
-        font-size: 13px;
-        font-weight: bold;
-        color: black;
-        margin: 0px;
-        padding: 0px;
-        text-align: center;
-    }
-    .biographiedumoment {
-        width: 200px;
-        height: 800px;
-        background-color: black;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        padding: 30px;
-        color: white;
-        border: 1px solid white;
-    }
-    img {
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-    }
+img {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    padding:1px;
+}
+
+.photosclips {
+    width: 250px;
+    height: 100px;
+    border: 1px solid black;
+}
+
+.descriptionpnl, .descriptionhatik, .descriptionhalsey, .descriptionninho, .lestitres, .descriptionbiographie {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px;
+}
+
+.lefooter {
+    font-size: 10px;
+}
+.apropos, .liens, .partenaires, .support, .contact {
+    line-height: 2px;
+    padding: 5px;
+}
+
 }
