--- a/assets/page3style.css
+++ b/assets/page3style.css
@@ -73,8 +73,8 @@ a:hover {
     width: 500px;
     height: 620px;
     color: black;
-    border:1px solid black;
-    padding:8px;
+    border: 1px solid black;
+    padding: 8px;
 }
 
 .biographiedumoment img {
@@ -84,8 +84,9 @@ a:hover {
     border: 1px solid black;
     /* filter: gray; /* IE6-9 */
     /* -webkit-filter: grayscale(1); Google Chrome, Safari 6+ & Opera 15+ */
-    /* filter: grayscale(1); Microsoft Edge and Firefox 35+ */ 
+    /* filter: grayscale(1); Microsoft Edge and Firefox 35+ */
 }
+
 /* 
 .biographiedumoment img:hover {
     -webkit-filter: grayscale(0);
@@ -102,15 +103,17 @@ a:hover {
 .biographie {
     text-align: justify;
     font-size: 15px;
-    padding:10px;
+    padding: 10px;
 }
 
 .deuxiemepartie {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding:20px;
+    padding: 20px;
 }
+
+/*-------------------------CONCERTS---------------------------*/
 
 .concerts {
     text-align: center;
@@ -120,12 +123,14 @@ a:hover {
     height: 615px;
     color: black;
     padding: 8px;
-    border:1px solid black;
+    border: 1px solid black;
 }
 
 .datesconcerts {
     padding: 10px;
 }
+
+/*-----------------------COUP DE COEUR / CLIP -----------------*/
 
 .introclip {
     text-align: center;
@@ -136,8 +141,8 @@ a:hover {
 }
 
 .clip {
-    padding:0px;
-    margin:auto;
+    padding: 0px;
+    margin: auto;
 }
 
 /*----------------LE FOOTER--------------*/
@@ -161,91 +166,74 @@ a:hover {
 
 /*----------------LE RESPONSIVE---------------*/
 
-
 @media screen and (max-width:768px) {
-
-body {
-    margin: 0 auto;
-    padding:0;
-}
-
-.titre {
-    font-size:17px;
-    text-align: center;
-}
-
-.nav-links {
-    font-size: 14px;
-}
-
-nav {
-    background:none;
-    margin:auto;
-    width:350px;
-}
-
-.titres p {
-    font-size: 17px;
-}
-
-.deuxiemepartie {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;  
-}
-
-.biographiedumoment {
-    width: 350px;
-    height: 650px;
-    color: black;
-    border:1px solid black;
-   margin:auto;
-}
-
-.biographiedumoment img {
-    width:350px;
-    height:200px;
-}
-
-.concerts {
-    width: 350px;
-    height: 600px;
-    color: black;
-    padding: 8px;
-    border:1px solid black;
-    margin:auto;
-}
-
-.datesconcerts {
-    padding: 10px;
-}
-
-.introclip {
-    text-align: center;
-    font-size: 14px;
-    padding: 14px;
-    letter-spacing: 3px;
-    font-weight: bold;
-}
-
-.titres p {
-    line-height:15px;
-}
-
-.clip {
-    margin: auto;
-    width:350px;
-}
-
-.lefooter {
-    font-size: 10px;
-    margin:auto;
-    width:450px;
-}
-
-.apropos, .liens, .partenaires, .support, .contact {
-    line-height: 2px;
-    padding: 5px;
-}
-
+    body {
+        margin: 0 auto;
+        padding: 0;
+    }
+    .titre {
+        font-size: 17px;
+        text-align: center;
+    }
+    .nav-links {
+        font-size: 14px;
+    }
+    nav {
+        background: none;
+        margin: auto;
+        width: 350px;
+    }
+    .titres p {
+        font-size: 17px;
+    }
+    .deuxiemepartie {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .biographiedumoment {
+        width: 350px;
+        height: 650px;
+        color: black;
+        border: 1px solid black;
+        margin: auto;
+    }
+    .biographiedumoment img {
+        width: 350px;
+        height: 200px;
+    }
+    .concerts {
+        width: 350px;
+        height: 600px;
+        color: black;
+        padding: 8px;
+        border: 1px solid black;
+        margin: auto;
+    }
+    .datesconcerts {
+        padding: 10px;
+    }
+    .introclip {
+        text-align: center;
+        font-size: 14px;
+        padding: 14px;
+        letter-spacing: 3px;
+        font-weight: bold;
+    }
+    .titres p {
+        line-height: 15px;
+    }
+    .clip {
+        margin: auto;
+        width: 350px;
+    }
+    .lefooter {
+        font-size: 10px;
+        margin: auto;
+        width: 450px;
+    }
+    .apropos, .liens, .partenaires, .support, .contact {
+        line-height: 2px;
+        padding: 5px;
+    }
 }
