--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+
 body {
     font-family: 'Raleway', sans-serif;
     padding: 0;
@@ -22,7 +23,7 @@ nav {
     height: 12vh;
     width: 100%;
     margin: auto;
-    background-color: white; 
+    background-color: white;
     color: black;
     display: flex;
     align-items: center;
@@ -119,6 +120,7 @@ img {
     text-align: center;
     font-style: italic;
     font-size: 17px;
+    padding:0;
     background-color: #C4C4C4;
 }
 
@@ -174,106 +176,88 @@ img {
 /*--------------------LE RESPONSIVE------------------------*/
 
 @media screen and (max-width:768px) {
-
-body {
-    margin: 0 auto;
-    padding: 0px;
-}
-
-.titre {
-    font-size:17px;
-    text-align: center;
-}
-
-.nav-links {
-    font-size: 14px;
-}
-
-nav {
-    background:none;
-    margin:auto;
-    width:350px;
-}
-
-.lesartistes {
-    margin-left:120px;
-    width:400px;
-}
-
-img {
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
-    margin: 20px;
-}
-
-.classementartistes {
-    display: flex;
-    flex-direction: column;
-}
-
-.recherchesrecentes {
-    display: none
-}
-
-.moteurderecherche {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-}
-
-#search1, #search2 {
-    width: 300px;
-    height: 20px;
-    text-align: center;
-    font-style: italic;
-    font-size: 15px;
-    background-color: #C4C4C4;
-}
-
-.moteurderecherche1, .moteurderecherche2 {
-    padding: 10px;
-    margin: auto;
-}
-
-.musicapplications {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 10px;
-    margin: 0;
-}
-
-.musicapplications img {
-    width: 50px;
-    height: 50px;
-    border: none;
-}
-
-.musicbrainz, .spotify, .tunein, .deezer {
-    padding: 1px;
-    margin: auto;
-    width:350px;
-}
-
-.applis {
-    margin: 0px;
-    padding: 0px;
-    font-weight: bold;
-    font-size: 14px;
-    color: black;
-    padding: 10px;
-}
-
-.lefooter {
-    font-size: 10px;
-}
-
-.apropos, .liens, .partenaires, .support, .contact {
-    line-height: 2px;
-    padding: 5px;
-}
-
+    body {
+        margin: 0 auto;
+        padding: 0px;
+    }
+    .titre {
+        font-size: 17px;
+        text-align: center;
+    }
+    .nav-links {
+        font-size: 14px;
+    }
+    nav {
+        background: none;
+        margin: auto;
+        width: 350px;
+    }
+    .lesartistes {
+        margin-left: 120px;
+        width: 400px;
+    }
+    img {
+        width: 100px;
+        height: 100px;
+        border: 1px solid black;
+        margin: 20px;
+    }
+    .classementartistes {
+        display: flex;
+        flex-direction: column;
+    }
+    .recherchesrecentes {
+        display: none
+    }
+    .moteurderecherche {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto;
+    }
+    #search1, #search2 {
+        width: 300px;
+        height: 20px;
+        text-align: center;
+        font-style: italic;
+        font-size: 15px;
+        background-color: #C4C4C4;
+    }
+    .moteurderecherche1, .moteurderecherche2 {
+        padding: 10px;
+        margin: auto;
+    }
+    .musicapplications {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 10px;
+        margin: 0;
+    }
+    .musicapplications img {
+        width: 50px;
+        height: 50px;
+        border: none;
+    }
+    .musicbrainz, .spotify, .tunein, .deezer {
+        padding: 1px;
+        margin: auto;
+        width: 350px;
+    }
+    .applis {
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;
+        font-size: 14px;
+        color: black;
+        padding: 10px;
+    }
+    .lefooter {
+        font-size: 10px;
+    }
+    .apropos, .liens, .partenaires, .support, .contact {
+        line-height: 2px;
+        padding: 5px;
+    }
 }
